[metadata]
name = step-select
version = 0.1.0
author = Chris Santiago
email = cjsantiago@gatech.edu
description = 'A SciKit-Learn style feature selector using best subsets and stepwise regression.'
long_description = file: README.md, LICENSE.txt
license: MIT License

[options]
packages = steps
include_package_data = True
python_requires = >= 3.7
install_requires =
    numpy
    scikit-learn

[options.extras_require]
dev =
    # docs
    sphinx
    furo
    myst-parser
    # tests
    pylint
    mypy
    pytest
    pytest-cov
    coverage
    # qa
    pre-commit
    tox
    check-manifest
    isort
    flake8
    # build
    twine
    wheel


[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 10
docstring-convention = numpy
extend-ignore = D

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[check-manifest]
ignore =
    docs
    docs/**
    notebooks
    notebooks/**
    .pre-commit-config.yaml
    .gitignore
    .pylintrc
    Makefile
