[metadata]
name = step-select
version = 0.1.0
author = Chris Santiago
email = cjsantiago@gatech.edu
license = MIT License
description = A SciKit-Learn style feature selector using best subsets and stepwise regression.
long_description = file: README.md, LICENSE.txt

[options]
packages = steps
include_package_data = True
python_requires = >= 3.7
install_requires =
    numpy>= 1.17.3
    scikit-learn>=0.23.1

[options.extras_require]
dev =
    # docs
    sphinx
    furo
    myst-parser
    # tests
    pylint
    mypy
    pytest
    pytest-cov
    coverage
    # qa
    pre-commit
    tox
    check-manifest
    isort
    flake8
    # build
    twine
    wheel


[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 10
docstring-convention = numpy
extend-ignore = D

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool:pytest]
testpaths = tests
addopts = --cov=steps --cov-report=html --cov-report=xml --verbose

[check-manifest]
ignore =
    docs
    docs/**
    notebooks
    notebooks/**
    .pre-commit-config.yaml
    .gitignore
    .pylintrc
    Makefile

[pylint.master]
ignore-patterns=
    test
    docs
disable=
    print-statement,
    parameter-unpacking,
    unpacking-in-except,
    old-raise-syntax,
    backtick,
    long-suffix,
    old-ne-operator,
    old-octal-literal,
    import-star-module-level,
    non-ascii-bytes-literal,
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
    apply-builtin,
    basestring-builtin,
    buffer-builtin,
    cmp-builtin,
    coerce-builtin,
    execfile-builtin,
    file-builtin,
    long-builtin,
    raw_input-builtin,
    reduce-builtin,
    standarderror-builtin,
    unicode-builtin,
    xrange-builtin,
    coerce-method,
    delslice-method,
    getslice-method,
    setslice-method,
    no-absolute-import,
    old-division,
    dict-iter-method,
    dict-view-method,
    next-method-called,
    metaclass-assignment,
    indexing-exception,
    raising-string,
    reload-builtin,
    oct-method,
    hex-method,
    nonzero-method,
    cmp-method,
    input-builtin,
    round-builtin,
    intern-builtin,
    unichr-builtin,
    map-builtin-not-iterating,
    zip-builtin-not-iterating,
    range-builtin-not-iterating,
    filter-builtin-not-iterating,
    using-cmp-argument,
    eq-without-hash,
    div-method,
    idiv-method,
    rdiv-method,
    exception-message-attribute,
    invalid-str-codec,
    sys-max-int,
    bad-python3-import,
    deprecated-string-function,
    deprecated-str-translate-call,
    deprecated-itertools-function,
    deprecated-types-field,
    next-method-defined,
    dict-items-not-iterating,
    dict-keys-not-iterating,
    dict-values-not-iterating,
    deprecated-operator-function,
    deprecated-urllib-function,
    xreadlines-attribute,
    deprecated-sys-function,
    exception-escape,
    comprehension-escape,
    # EXTRA
    unused-wildcard-import,
    invalid-name,
    attribute-defined-outside-init,
    too-few-public-methods,
    too-many-instance-attributes,
    too-many-arguments,
    import-error,
    duplicate-code

[pylint.format]
max-line-length = 100
max-module-lines = 1000
