[metadata]
name = step-select
version = 0.1.0
author = Chris Santiago
email = cjsantiago@gatech.edu
license = MIT License
description = A SciKit-Learn style feature selector using best subsets and stepwise regression.
long_description = file: README.md, LICENSE.txt

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
    numpy>= 1.17.3
    scikit-learn>=0.23.1

[options.packages.find]
exclude = tests

[options.extras_require]
docs = sphinx; furo; myst-parser
tests = nox; pytest; pytest-cov
qa = mypy; pylint; flake9; isort; check-manifest; pre-commit
build = twine; wheel

[flake8]
max-line-length = 100
exclude = tests/*, noxfile.py, docs/*
max-complexity = 10

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool:pytest]
testpaths = tests
addopts = --cov=steps --cov-report=html --cov-report=xml --verbose

[check-manifest]
ignore =
    docs
    docs/**
    notebooks
    notebooks/**
    .pre-commit-config.yaml
    .gitignore
    .pylintrc
    Makefile
    noxfile.py

[pylint.master]
fail-under = 9.0
ignore-patterns = test
disable=
    # Disable these for scikit-learn style code
    invalid-name,
    attribute-defined-outside-init,

[pylint.format]
max-line-length = 100
max-module-lines = 1000

[pylint.similarities]
min-similarity-lines = 4
ignore-comments = yes
ignore-docstrings = yes
